Manifests/1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minecraft-server
  namespace: default
  labels:
    app: minecraft
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minecraft
  template:
    metadata:
      labels:
        app: minecraft
    spec:
      containers:
      - name: minecraft
        image: itzg/minecraft-server
        ports:
        - containerPort: 25565
        resources:
          limits:
            cpu: "1000m"
            memory: "2Gi"
          requests:
            cpu: "500m"
            memory: "1Gi"
        volumeMounts:
        - name: minecraft-volume
          mountPath: /data  # The path inside the container where the volume should be mounted.
      volumes:
      - name: minecraft-volume
        persistentVolumeClaim:
          claimName: minecraft-pvc
