Manifests/2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minecraft-service
  labels:
    app: minecraft
spec:
  type: NodePort
  ports:
  - port: 25565
    targetPort: 25565
    protocol: TCP
  selector:
    app: minecraft
